--- a/format_training.ipynb
+++ b/format_training.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
     "    p = np.atleast_2d(p)\n",
     "    return np.squeeze((R @ (p.T-o.T) + o.T).T)\n",
     "\n",
-    "def format_sequences(frame):\n",
+    "def generate_sequences(frame):\n",
     "    ids = df.id.unique()\n",
     "    print(\"{} unique ids: {}\".format(len(ids), ids))\n",
     "    \n",
@@ -432,8 +432,8 @@
     "        # if len(x_list) > 10:\n",
     "        #     break\n",
     "    \n",
-    "    print(\"\\nGenerated {} sequences total from {} people.\".format(gen_total, len(all_persons_list)))\n",
-    "    print(\"Skipped {} people. {} too short. {} frequency issue (like gaps).\".format(\n",
+    "    print(\"\\nGenerated {} sequences total from {} trajectories.\".format(gen_total, len(all_persons_list)))\n",
+    "    print(\"Skipped {} trajectories. {} too short. {} frequency issue (like gaps).\".format(\n",
     "        skipped_too_short + skipped_frequency_problem, skipped_too_short, skipped_frequency_problem))\n",
     "    \n",
     "    return all_persons_list\n"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -477,14 +477,46 @@
       "Skipped too short sequence 9344100: 8s\n",
       "Skipped too short sequence 9344700: 0s\n",
       "\n",
-      "Generated 2535 sequences total from 11 people.\n",
-      "Skipped 4 people. 3 too short. 1 frequency issue (like gaps).\n"
+      "Generated 2535 sequences total from 11 trajectories.\n",
+      "Skipped 4 trajectories. 3 too short. 1 frequency issue (like gaps).\n",
+      "Dividing 11 human trajectories: 7 training, 2 eval, 2 test\n"
      ]
     }
    ],
    "source": [
-    "all_persons = format_sequences(df)\n",
-    "\n"
+    "def divide_and_format(persons, train_ratio=0.7, eval_ratio=0.2):\n",
+    "    assert(train_ratio + eval_ratio <= 1.0)\n",
+    "    test_percentage = 1.0 - (train_ratio + eval_ratio)\n",
+    "\n",
+    "    # divide human paths into train, eval and test\n",
+    "    # by dividing them based on humans it is guaranteed that there is no\n",
+    "    # information leak\n",
+    "\n",
+    "    # shuffle the paths\n",
+    "    random.shuffle(persons)\n",
+    "\n",
+    "    # calculate indices\n",
+    "    num_person = len(persons)\n",
+    "    train_num = int(num_person * train_ratio)\n",
+    "    eval_num = int(num_person * eval_ratio)\n",
+    "    test_num = num_person - (train_num + eval_num)\n",
+    "    assert test_num >= 0\n",
+    "\n",
+    "    print(\"Dividing {} human trajectories: {} training, {} eval, {} test\".format(num_person, train_num, eval_num, test_num))\n",
+    "\n",
+    "    train_data = persons[:train_num]\n",
+    "    eval_data = persons[train_num:train_num+eval_num]\n",
+    "    test_data = None\n",
+    "    if test_num > 0:\n",
+    "        test_data = persons[train_num+eval_num:]\n",
+    "    \n",
+    "    assert(train_num == len(train_data))\n",
+    "    assert(eval_num == len(eval_data))\n",
+    "    assert(test_data is None or test_num == len(test_data))\n",
+    "\n",
+    "\n",
+    "persons = generate_sequences(df)\n",
+    "divide_and_format(persons)"
    ]
   }
  ],
