Example formatting done

--- a/format_training.ipynb
+++ b/format_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>x</th>\n      <th>y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>1.000000e+04</td>\n      <td>10000.000000</td>\n      <td>10000.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>9.331807e+06</td>\n      <td>-0.449620</td>\n      <td>-0.200490</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>7.243132e+03</td>\n      <td>1.976829</td>\n      <td>0.961086</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>9.315400e+06</td>\n      <td>-3.990600</td>\n      <td>-2.280200</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>9.330400e+06</td>\n      <td>-1.700325</td>\n      <td>-0.997125</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>9.333700e+06</td>\n      <td>-1.125300</td>\n      <td>-0.134950</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>9.335700e+06</td>\n      <td>1.011175</td>\n      <td>0.572200</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>9.344700e+06</td>\n      <td>4.167800</td>\n      <td>2.039800</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "                 id             x             y\ncount  1.000000e+04  10000.000000  10000.000000\nmean   9.331807e+06     -0.449620     -0.200490\nstd    7.243132e+03      1.976829      0.961086\nmin    9.315400e+06     -3.990600     -2.280200\n25%    9.330400e+06     -1.700325     -0.997125\n50%    9.333700e+06     -1.125300     -0.134950\n75%    9.335700e+06      1.011175      0.572200\nmax    9.344700e+06      4.167800      2.039800"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>x</th>\n      <th>y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>-0.9670</td>\n      <td>0.7396</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>-0.9671</td>\n      <td>0.7410</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>-0.9704</td>\n      <td>0.7449</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>-0.9727</td>\n      <td>0.7479</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "         x       y\n2  -0.9670  0.7396\n5  -0.9671  0.7410\n8  -0.9704  0.7449\n11 -0.9727  0.7479"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +307,11 @@
     "    return np.squeeze((R @ (p.T-o.T) + o.T).T)\n",
     "\n",
     "def generate_sequences(frame):\n",
+    "    \"\"\"\n",
+    "    Returns a list of people.\n",
+    "    Has the following format: a list of lists of (x, goal, y)\n",
+    "    \"\"\"\n",
+    "\n",
     "    ids = df.id.unique()\n",
     "    print(\"{} unique ids: {}\".format(len(ids), ids))\n",
     "    \n",
@@ -382,7 +387,6 @@
     "            # create number of paths equal to the rotation amount, data augmentation\n",
     "            for _ in range(ROTATION_AMOUNT):\n",
     "                rotation_angle = random.randrange(0, 359)\n",
-    "                # print(rotation_angle)\n",
     "\n",
     "                # rotate the data array around the current position (0, 0)\n",
     "                rotated_data = rotate_array(data.copy(), degrees=rotation_angle)\n",
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -479,11 +483,35 @@
       "\n",
       "Generated 2535 sequences total from 11 trajectories.\n",
       "Skipped 4 trajectories. 3 too short. 1 frequency issue (like gaps).\n",
-      "Dividing 11 human trajectories: 7 training, 2 eval, 2 test\n"
+      "Dividing 11 human trajectories: 8 training, 3 eval, 0 test\n",
+      "(1785, 40, 2) float64 (1785, 25) float32 (1785, 40, 2) float64\n",
+      "(750, 40, 2) float64 (750, 25) float32 (750, 40, 2) float64\n"
      ]
     }
    ],
    "source": [
+    "def _format_x_y(persons):\n",
+    "    x_poses = []\n",
+    "    goals_list = []\n",
+    "    y_poses = []\n",
+    "\n",
+    "    # go through all the people\n",
+    "    for person in persons:\n",
+    "        person_x_poses = [i[0] for i in person]\n",
+    "        person_goals   = [i[1] for i in person]\n",
+    "        person_y_poses = [i[2] for i in person]\n",
+    "\n",
+    "        x_poses.extend(person_x_poses)\n",
+    "        goals_list.extend(person_goals)\n",
+    "        y_poses.extend(person_y_poses)\n",
+    "\n",
+    "    x = np.array(x_poses)\n",
+    "    y = np.array(y_poses)\n",
+    "    goals = np.array(goals_list)\n",
+    "    \n",
+    "    return x, goals, y\n",
+    "\n",
+    "\n",
     "def divide_and_format(persons, train_ratio=0.7, eval_ratio=0.2):\n",
     "    assert(train_ratio + eval_ratio <= 1.0)\n",
     "    test_percentage = 1.0 - (train_ratio + eval_ratio)\n",
@@ -498,8 +526,14 @@
     "    # calculate indices\n",
     "    num_person = len(persons)\n",
     "    train_num = int(num_person * train_ratio)\n",
-    "    eval_num = int(num_person * eval_ratio)\n",
-    "    test_num = num_person - (train_num + eval_num)\n",
+    "    eval_num = 0\n",
+    "    test_num = 0\n",
+    "    if train_ratio + eval_ratio < 1:\n",
+    "        eval_num = int(num_person * eval_ratio)\n",
+    "        test_num = num_person - (train_num + eval_num)\n",
+    "    else:\n",
+    "        eval_num = num_person - train_num\n",
+    "    \n",
     "    assert test_num >= 0\n",
     "\n",
     "    print(\"Dividing {} human trajectories: {} training, {} eval, {} test\".format(num_person, train_num, eval_num, test_num))\n",
@@ -514,9 +548,29 @@
     "    assert(eval_num == len(eval_data))\n",
     "    assert(test_data is None or test_num == len(test_data))\n",
     "\n",
+    "    train_data = _format_x_y(train_data)\n",
+    "    print(train_data[0].shape, train_data[0].dtype, train_data[1].shape, train_data[1].dtype, train_data[2].shape, train_data[2].dtype)\n",
+    "    eval_data = _format_x_y(eval_data)\n",
+    "    print(eval_data[0].shape, eval_data[0].dtype, eval_data[1].shape, eval_data[1].dtype, eval_data[2].shape, eval_data[2].dtype)\n",
+    "    test_data = None\n",
+    "    if test_data is not None:\n",
+    "        test_data = _format_x_y(test_data)\n",
+    "    \n",
+    "    return train_data, eval_data, test_data\n",
+    "    \n",
     "\n",
     "persons = generate_sequences(df)\n",
-    "divide_and_format(persons)"
+    "train_data, eval_data, test_data = divide_and_format(persons, train_ratio=0.8, eval_ratio=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compile_and_fit():\n",
+    "    pass"
    ]
   }
  ],
