Goal comparison effectiveness

--- a/simple_model_comparison.ipynb
+++ b/simple_model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'visualization' from '/home/deus/Documents/trajectory-prediction/visualization.py'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 81.85it/s]"
+      "100%|██████████| 15/15 [00:00<00:00, 82.53it/s]"
      ]
     },
     {
@@ -80,8 +80,8 @@
       "y              float64\n",
       "dtype: object\n",
       "Dividing 11 human trajectories: 8 training, 3 eval, 0 test\n",
-      "train (2195, 40, 2) float64 (2195, 25) float32 (2195, 40, 2) float64\n",
-      "eval (340, 40, 2) float64 (340, 25) float32 (340, 40, 2) float64\n"
+      "train (2370, 40, 2) float64 (2370, 25) float32 (2370, 40, 2) float64\n",
+      "eval (165, 40, 2) float64 (165, 25) float32 (165, 40, 2) float64\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,23 +109,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "69/69 [==============================] - 1s 6ms/step - loss: 0.0091 - mean_absolute_error: 0.0569 - val_loss: 0.0113 - val_mean_absolute_error: 0.0540\n",
+      "75/75 [==============================] - 2s 6ms/step - loss: 0.0098 - mean_absolute_error: 0.0589 - val_loss: 0.0102 - val_mean_absolute_error: 0.0670\n",
       "Epoch 2/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0034 - mean_absolute_error: 0.0364 - val_loss: 0.0107 - val_mean_absolute_error: 0.0522\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0045 - mean_absolute_error: 0.0402 - val_loss: 0.0097 - val_mean_absolute_error: 0.0653\n",
       "Epoch 3/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0033 - mean_absolute_error: 0.0356 - val_loss: 0.0107 - val_mean_absolute_error: 0.0530\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0042 - mean_absolute_error: 0.0387 - val_loss: 0.0086 - val_mean_absolute_error: 0.0583\n",
       "Epoch 4/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0033 - mean_absolute_error: 0.0365 - val_loss: 0.0109 - val_mean_absolute_error: 0.0510\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0042 - mean_absolute_error: 0.0380 - val_loss: 0.0098 - val_mean_absolute_error: 0.0615\n",
       "Epoch 5/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0032 - mean_absolute_error: 0.0356 - val_loss: 0.0113 - val_mean_absolute_error: 0.0526\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0040 - mean_absolute_error: 0.0367 - val_loss: 0.0088 - val_mean_absolute_error: 0.0594\n",
       "Epoch 1/20\n",
-      "69/69 [==============================] - 1s 6ms/step - loss: 0.0097 - mean_absolute_error: 0.0603 - val_loss: 0.0069 - val_mean_absolute_error: 0.0570\n",
+      "75/75 [==============================] - 1s 6ms/step - loss: 0.0090 - mean_absolute_error: 0.0585 - val_loss: 0.0032 - val_mean_absolute_error: 0.0405\n",
       "Epoch 2/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0018 - mean_absolute_error: 0.0300 - val_loss: 0.0068 - val_mean_absolute_error: 0.0528\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0022 - mean_absolute_error: 0.0317 - val_loss: 0.0031 - val_mean_absolute_error: 0.0403\n",
       "Epoch 3/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0015 - mean_absolute_error: 0.0272 - val_loss: 0.0072 - val_mean_absolute_error: 0.0539\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0022 - mean_absolute_error: 0.0313 - val_loss: 0.0030 - val_mean_absolute_error: 0.0376\n",
       "Epoch 4/20\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.0014 - mean_absolute_error: 0.0260 - val_loss: 0.0073 - val_mean_absolute_error: 0.0541\n"
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0019 - mean_absolute_error: 0.0294 - val_loss: 0.0028 - val_mean_absolute_error: 0.0363\n",
+      "Epoch 5/20\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0018 - mean_absolute_error: 0.0287 - val_loss: 0.0028 - val_mean_absolute_error: 0.0366\n",
+      "Epoch 6/20\n",
+      "75/75 [==============================] - 0s 3ms/step - loss: 0.0018 - mean_absolute_error: 0.0290 - val_loss: 0.0035 - val_mean_absolute_error: 0.0419\n"
      ]
     }
    ],
@@ -177,6 +181,13 @@
     "visualization.draw_path(eval_data_x[N], eval_data_y[N], prediction_model=model_no_goal, name=\"no goal prediction\")\n",
     "visualization.draw_path(eval_data_x[N], eval_data_y[N], eval_data_goals[N], prediction_model=model_goal, name=\"with accurate goal prediction\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
