Simple goal comparison finished

--- a/simple_model_comparison.ipynb
+++ b/simple_model_comparison.ipynb
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 82.53it/s]"
+      "  1%|          | 7/1224 [00:00<00:17, 69.46it/s]"
      ]
     },
     {
@@ -78,30 +78,38 @@
       "id               int64\n",
       "x              float64\n",
       "y              float64\n",
-      "dtype: object\n",
-      "Dividing 11 human trajectories: 8 training, 3 eval, 0 test\n",
-      "train (2370, 40, 2) float64 (2370, 25) float32 (2370, 40, 2) float64\n",
-      "eval (165, 40, 2) float64 (165, 25) float32 (165, 40, 2) float64\n"
+      "dtype: object\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 1224/1224 [00:16<00:00, 72.83it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dividing 697 human trajectories: 627 training, 70 eval, 0 test\n",
+      "train (226805, 40, 2) float64 (226805, 25) float32 (226805, 40, 2) float64\n",
+      "eval (22415, 40, 2) float64 (22415, 25) float32 (22415, 40, 2) float64\n"
      ]
     }
    ],
    "source": [
-    "file_path = \"data/small.csv\"\n",
+    "# file_path = \"data/small.csv\"\n",
+    "file_path = \"data/medium_aa.csv\"\n",
     "# file_path = \"data/atc-20121114.csv\"\n",
     "\n",
-    "train_data, eval_data, test_data = parsing.parse_atc_day(file_path)"
+    "train_data, eval_data, test_data = parsing.parse_atc_day(file_path, train_ratio=0.9, eval_ratio=0.1)\n",
+    "eval_data_x, eval_data_goals, eval_data_y = eval_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,33 +117,47 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "75/75 [==============================] - 2s 6ms/step - loss: 0.0098 - mean_absolute_error: 0.0589 - val_loss: 0.0102 - val_mean_absolute_error: 0.0670\n",
+      "7088/7088 [==============================] - 21s 3ms/step - loss: 0.0031 - mean_absolute_error: 0.0355 - val_loss: 0.0027 - val_mean_absolute_error: 0.0336\n",
       "Epoch 2/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0045 - mean_absolute_error: 0.0402 - val_loss: 0.0097 - val_mean_absolute_error: 0.0653\n",
+      "7088/7088 [==============================] - 20s 3ms/step - loss: 0.0027 - mean_absolute_error: 0.0326 - val_loss: 0.0025 - val_mean_absolute_error: 0.0316\n",
       "Epoch 3/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0042 - mean_absolute_error: 0.0387 - val_loss: 0.0086 - val_mean_absolute_error: 0.0583\n",
+      "7088/7088 [==============================] - 20s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0320 - val_loss: 0.0026 - val_mean_absolute_error: 0.0322\n",
       "Epoch 4/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0042 - mean_absolute_error: 0.0380 - val_loss: 0.0098 - val_mean_absolute_error: 0.0615\n",
+      "7088/7088 [==============================] - 21s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0316 - val_loss: 0.0025 - val_mean_absolute_error: 0.0311\n",
       "Epoch 5/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0040 - mean_absolute_error: 0.0367 - val_loss: 0.0088 - val_mean_absolute_error: 0.0594\n",
-      "Epoch 1/20\n",
-      "75/75 [==============================] - 1s 6ms/step - loss: 0.0090 - mean_absolute_error: 0.0585 - val_loss: 0.0032 - val_mean_absolute_error: 0.0405\n",
-      "Epoch 2/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0022 - mean_absolute_error: 0.0317 - val_loss: 0.0031 - val_mean_absolute_error: 0.0403\n",
-      "Epoch 3/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0022 - mean_absolute_error: 0.0313 - val_loss: 0.0030 - val_mean_absolute_error: 0.0376\n",
-      "Epoch 4/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0019 - mean_absolute_error: 0.0294 - val_loss: 0.0028 - val_mean_absolute_error: 0.0363\n",
-      "Epoch 5/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0018 - mean_absolute_error: 0.0287 - val_loss: 0.0028 - val_mean_absolute_error: 0.0366\n",
+      "7088/7088 [==============================] - 21s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0315 - val_loss: 0.0025 - val_mean_absolute_error: 0.0314\n",
       "Epoch 6/20\n",
-      "75/75 [==============================] - 0s 3ms/step - loss: 0.0018 - mean_absolute_error: 0.0290 - val_loss: 0.0035 - val_mean_absolute_error: 0.0419\n"
+      "7088/7088 [==============================] - 21s 3ms/step - loss: 0.0026 - mean_absolute_error: 0.0313 - val_loss: 0.0025 - val_mean_absolute_error: 0.0318\n"
      ]
     }
    ],
    "source": [
-    "model_no_goal, _ = models.simple_lstm(train_data, eval_data)\n",
-    "model_goal, _ = models.simple_lstm_goal(train_data, eval_data)"
+    "model = None\n",
+    "model, _ = models.simple_lstm(train_data, eval_data)\n",
+    "# model, _ = models.simple_lstm_goal(train_data, eval_data)\n",
+    "\n",
+    "# model_no_goal, _ = models.simple_lstm(train_data, eval_data)\n",
+    "# model_goal, _ = models.simple_lstm_goal(train_data, eval_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MED: 0.04988967905875525\n",
+      "FDE: 0.09320758756838872\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eval_data_goal_x = model_interface.concatenate_x_goal(eval_data_x, eval_data_goals)\n",
+    "model_interface.calculate_final_metrics(model, eval_x=eval_data_x, eval_y=eval_data_y, filepath='no_goal_model_errors')\n",
+    "# model_interface.calculate_final_metrics(model, eval_x=eval_data_goal_x, eval_y=eval_data_y, filepath='goal_model_errors')"
    ]
   },
   {
@@ -176,7 +198,7 @@
     }
    ],
    "source": [
-    "eval_data_x, eval_data_goals, eval_data_y = eval_data\n",
+    "\n",
     "N = 0\n",
     "visualization.draw_path(eval_data_x[N], eval_data_y[N], prediction_model=model_no_goal, name=\"no goal prediction\")\n",
     "visualization.draw_path(eval_data_x[N], eval_data_y[N], eval_data_goals[N], prediction_model=model_goal, name=\"with accurate goal prediction\")"
@@ -199,16 +221,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   },
   "orig_nbformat": 4
  },
